# gen/api/dida_grpc.pb.go
@@ -1,0 +1,125 @@
+// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc v1.5.1
+// - protoc             (unknown)
+// source: api/dida.proto
+
+package api
+
+import (
+	context "context"
+	grpc "google.golang.org/grpc"
+	codes "google.golang.org/grpc/codes"
+	status "google.golang.org/grpc/status"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+// Requires gRPC-Go v1.64.0 or later.
+const _ = grpc.SupportPackageIsVersion9
+
+const (
+	DidaAPIService_GetTask_FullMethodName = "/api.DidaAPIService/GetTask"
+)
+
+// DidaAPIServiceClient is the client API for DidaAPIService service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+//
+// Dida365APIService has been implemented by Dida365 official, here is just for AI completion
+type DidaAPIServiceClient interface {
+	GetTask(ctx context.Context, in *GetTaskRequest, opts ...grpc.CallOption) (*Task, error)
+}
+
+type didaAPIServiceClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewDidaAPIServiceClient(cc grpc.ClientConnInterface) DidaAPIServiceClient {
+	return &didaAPIServiceClient{cc}
+}
+
+func (c *didaAPIServiceClient) GetTask(ctx context.Context, in *GetTaskRequest, opts ...grpc.CallOption) (*Task, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(Task)
+	err := c.cc.Invoke(ctx, DidaAPIService_GetTask_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// DidaAPIServiceServer is the server API for DidaAPIService service.
+// All implementations must embed UnimplementedDidaAPIServiceServer
+// for forward compatibility.
+//
+// Dida365APIService has been implemented by Dida365 official, here is just for AI completion
+type DidaAPIServiceServer interface {
+	GetTask(context.Context, *GetTaskRequest) (*Task, error)
+	mustEmbedUnimplementedDidaAPIServiceServer()
+}
+
+// UnimplementedDidaAPIServiceServer must be embedded to have
+// forward compatible implementations.
+//
+// NOTE: this should be embedded by value instead of pointer to avoid a nil
+// pointer dereference when methods are called.
+type UnimplementedDidaAPIServiceServer struct{}
+
+func (UnimplementedDidaAPIServiceServer) GetTask(context.Context, *GetTaskRequest) (*Task, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetTask not implemented")
+}
+func (UnimplementedDidaAPIServiceServer) mustEmbedUnimplementedDidaAPIServiceServer() {}
+func (UnimplementedDidaAPIServiceServer) testEmbeddedByValue()                        {}
+
+// UnsafeDidaAPIServiceServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to DidaAPIServiceServer will
+// result in compilation errors.
+type UnsafeDidaAPIServiceServer interface {
+	mustEmbedUnimplementedDidaAPIServiceServer()
+}
+
+func RegisterDidaAPIServiceServer(s grpc.ServiceRegistrar, srv DidaAPIServiceServer) {
+	// If the following call pancis, it indicates UnimplementedDidaAPIServiceServer was
+	// embedded by pointer and is nil.  This will cause panics if an
+	// unimplemented method is ever invoked, so we test this at initialization
+	// time to prevent it from happening at runtime later due to I/O.
+	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
+		t.testEmbeddedByValue()
+	}
+	s.RegisterService(&DidaAPIService_ServiceDesc, srv)
+}
+
+func _DidaAPIService_GetTask_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetTaskRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(DidaAPIServiceServer).GetTask(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: DidaAPIService_GetTask_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(DidaAPIServiceServer).GetTask(ctx, req.(*GetTaskRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// DidaAPIService_ServiceDesc is the grpc.ServiceDesc for DidaAPIService service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var DidaAPIService_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "api.DidaAPIService",
+	HandlerType: (*DidaAPIServiceServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "GetTask",
+			Handler:    _DidaAPIService_GetTask_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "api/dida.proto",
+}
